# RAGMark

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docker/: .env.example  docker-compose.yml
examples/: qa_export_example.py
scripts/: run_bench.py
src/fitz/: __init__.pyi
src/langdetect/: __init__.pyi
src/ragmark/: __init__.py  exceptions.py  logger.py
src/ragmark/adapters/: __init__.py  base.py
src/ragmark/adapters/formats/: __init__.py  json_adapter.py  jsonl_adapter.py  yaml_adapter.py
src/ragmark/adapters/transformers/: __init__.py  qa_adapter.py
src/ragmark/arena/: __init__.py  cache.py  engine.py  models.py  reporting.py
src/ragmark/config/: __init__.py  profile.py
src/ragmark/evaluation/: __init__.py  retrieval_metrics.py
src/ragmark/forge/: __init__.py  factory.py  fragmenters.py  ingestors.py  metrics.py  qa_exporter.py  qa_validator.py  question_generator.py  runner.py
src/ragmark/generation/: __init__.py  context.py  drivers.py  engine.py  prompts.py
src/ragmark/index/: __init__.py  backends.py  base.py  embedders.py  factory.py  rate_limiter.py
src/ragmark/metrics/: __init__.py  base.py  metrics.py  registry.py  reporting.py
src/ragmark/metrics/evaluation/: __init__.py  generation.py  judge_cache.py  retrieval.py
src/ragmark/retrieval/: __init__.py  base.py  factory.py  rerankers.py  strategies.py
src/ragmark/schemas/: __init__.py  documents.py  evaluation.py  generation.py  qa.py  retrieval.py
tests/: conftest.py  test_arena_cache.py  test_arena_engine.py  test_arena_reporting.py  test_bases.py  test_config.py  test_context_manager.py  test_core_factories.py  test_dense_retriever.py  test_eval_metric.py  test_exceptions.py  test_fitz_ingestor.py  test_forge_factories.py  test_forge_metrics.py  test_forge_runner.py  test_generation_metrics.py  test_llama_cpp_driver.py  test_memory_index.py  test_metric_registry.py  test_monitor_metric.py  test_prompt_template.py  test_qa_exporter.py  test_question_generator.py  test_rag_generator.py  test_rate_limiter.py  test_rerankers.py  test_retrieval_metrics.py  test_retrievers.py  test_run_bench.py  test_schemas.py  test_sentence_transformer_embedder.py  test_token_fragmenter.py
tests/unit/: __init__.py  test_config.py  test_embedders.py  test_exceptions.py  test_factories.py  test_forge.py  test_forge_factories.py  test_generation.py  test_rerankers.py  test_retrievers.py  test_schemas.py
