[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragmark"
version = "0.1.0"
description = "A modular benchmarking framework for Retrieval-Augmented Generation (RAG) pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ll-ohan" }]
keywords = ["rag", "benchmark", "retrieval", "llm", "evaluation", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "httpx>=0.24",
    "jinja2>=3.1",
    "rich>=13.0",
    "typer>=0.9",
    "tiktoken>=0.5",
    "langdetect>=1.0.9",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
ingest = [
    "pymupdf>=1.23",
    "marker-pdf>=0.2",
]
db = [
    "qdrant-client>=1.7",
    "pymilvus>=2.3",
    "lancedb>=0.4",
]
llm = [
    "llama-cpp-python>=0.2",
    "openai>=1.0",
]
embed = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-PyYAML>=6.0",
    "types-tqdm>=4.65",
    "pre-commit>=3.5",
]
all = [
    "ragmark[ingest,db,llm,embed,dev]",
]

[project.urls]
Homepage = "https://github.com/ll-ohan/ragmark"
Documentation = "https://github.com/ll-ohan/ragmark#readme"
Repository = "https://github.com/ll-ohan/ragmark"
Issues = "https://github.com/ll-ohan/ragmark/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragmark"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ragmark"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -v"
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external infrastructure (Docker services)",
]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
packages = ["ragmark"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
source = ["src/ragmark"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
]
fail_under = 80
show_missing = true
